# casbin-CMake-setup

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
modules/: FindExtPackages.cmake  Findcasbin.cmake  Findjson.cmake
src/: main.cpp
